fix: :lipstick: remove center align and font size as default

--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -1,5 +1,4 @@
 .heading {
-  text-align: center;
   background: -webkit-linear-gradient(
     var(--text-normal),
     var(--text-highlight)
@@ -7,7 +6,6 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  font-size: 4rem;
   margin-top: 1rem;
   font-weight: 700;
 }
