--- a/src/components/portfolio/PresentationContent/PresentationContent.module.css
+++ b/src/components/portfolio/PresentationContent/PresentationContent.module.css
@@ -68,6 +68,11 @@
   border-radius: 0 0 0 0.125rem;
 }
 
+.title {
+  text-align: center;
+  font-size: 4rem;
+}
+
 .description {
   text-align: center;
   color: var(--text-highlight);
